<resources>
    <string name="app_name">Webblen</string>
    <string name="title_activity_main">Main</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="terms_and_conditions_login"><u>By Logging In, You Agree to Our Terms and Conditions</u></string>
    <string name="terms_and_conditions_register"><u>By Registering, You Agree to Our Terms and Conditions</u></string>
    <string name="facebook_app_id">1366128250170949</string>
    <string name="fb_login_protocol_scheme">fb1366128250170949</string>
    <string name="twitter_key">9gDtPWHxcnj6CUoyeVQCKGsGl</string>
    <string name="twitter_secret">y57kSG4yUowPNVXNEy5EEbUybTR3Dt72VT4FydWhZ1oKMnspQa</string>
    <string name="google_license">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmJJ1KeGhMu7BHMGFZ8G8zW2KjEsqfROqbKP1zp9RjMtSHUT5OE+Pn8BhdjE7DDteOqLhW+CeBPoH4xwQgfEPT4I+bvSN4aTqxlMTtl6haIYA64Re74nD3BfwkYhjT7SiOuP90UA3TWPzOfuP2gthJk9ZidyhlTnFrKbyQW4rw4J2HFRGSSIU/UbUQEe1mvjBkLv8sdalLyA9TOXZfK/wjr6fJz/N6Bb9iLknnw01l/6bcYOfZU5bJX9TrKVdc4QCGCj2ZVle2UlQiArj0GJvtVy7cQZf2GPfPBVKlPNapFs5SjBxeQGPSN8PXGh4Sg/G9Z/mvHg0hnVRysvbejyd6QIDAQAB</string>
    <string name="dashboard_menu_option">Dashboard</string>
    <string name="interests_menu_option">Interests</string>
    <string name="create_event_menu_option">Create Event</string>
    <string name="my_events_menu_option">My Events</string>
    <string name="wallet_menu_option">Wallet</string>
    <string name="settings_menu_option">Settings</string>
    <string name="contact_menu_option">Contact Us</string>
    <string name="what_is_webblen_menu_option">What is Webblen?</string>
    <string name="logout_menu_option">Logout</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="username_placeholder">\@username</string>
    <string name="webblenDesc">Tokens that can be traded and transferred at anytime. \nWebblen can be converted to Web Power in a process called powering up.</string>
    <string name="webPowerDesc">Influence tokens which give you more control over event payouts and allow you to earn more on attendance rewards.</string>
    <string name="webDollarDesc">Tokens worth about $1.00 of WBLN, currently collecting 0% APR.</string>
    <string name="savingsDesc">Balance subject to 3 day withdraw waiting period, Web Dollars currently collecting 0% APR.</string>
    <string name="accountValDesc">The value is based on an average value of WBLN in US dollars.</string>
    <string name="walletShortHand">Account Value: $0.00</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam faucibus quam velit, ut vehicula felis accumsan nec. Integer tristique euismod odio. Integer elit nisl, pellentesque ultricies mauris et, consequat ornare erat. Curabitur vulputate elementum cursus. Nulla in rutrum nibh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
